tests/ui/consts/non-const-value-in-const.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/non-const-value-in-const.rs:3:20
   |
LL |     const Y: i32 = x;
   |                    ^ non-constant value
   |
help: consider using `let` instead of `const`
   |
LL -     const Y: i32 = x;
LL +     let Y: i32 = x;
   |

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/non-const-value-in-const.rs:6:17
   |
LL |     let _ = [0; x];
   |                 ^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     let x = 5;
LL +     const x: /* Type */ = 5;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0435`.
